--- a/index.html
+++ b/index.html
@@ -4,9 +4,84 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Web Studio</title>
 </head>
+<header>
+    <nav>
+        <a href="/">WebStudio</a>
+            <ul>
+                <li><a href="">Студия</a></li>
+                <li><a href="">Портфолио</a></li>
+                <li><a href="">Контакты</a></li>
+            </ul>
+            <ul>
+                <li>info@devstudio.com</li>
+                <li>+38 096 111 11 11</li>
+            </ul>
+    </nav>
+</header>
 <body>
-    
+    <section>Эффективные решения для вашего бизнеса</section>
+    <section>
+        <h1>наши преимущества</h1>
+        <ul>
+            <li>
+                <h2>Внимание к деталям</h2>
+                <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+            </li>
+            <li>
+                <h2>Пунктуальность</h2>
+                <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+            </li>
+            <li>
+                <h2>Планирование</h2>
+                <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+            </li>
+            <li>
+                <h2>Современные технологии</h2>
+                <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+            </li>
+        </ul>
+    </section>
+    <section>
+        <h1>Чем мы занимаемся</h1>
+        <ul>
+            <li><img src="./images/box 1.png" alt="box1" width="370"></li>
+            <li><img src="./images/box 2.png" alt="box2" width="370"></li>
+            <li><img src="./images/box 3.png" alt="box3" width="370"></li>
+        </ul>
+    </section>
+    <section>
+        <h1>Наша команда</h1>
+        <ul>
+            <li>
+                <img src="./images/img1.png" alt="img1" width="270">           
+                <h2>Игорь Демьяненко</h2>
+                <p>Product Designer</p>
+            </li>
+            <li>
+                <img src="./images/img2.png" alt="img2" width="270">
+                <h2>Ольга Репина</h2>
+                <p>Frontend Developer</p>
+            </li>
+            <li>
+                <img src="./images/img3.png" alt="img3" width="270">
+                <h2>Николай Тарасов</h2>
+                <p>Marketing</p>
+            </li>
+            <li>
+                <img src="./images/img4.png" alt="img4" width="270">
+                <h2>Михаил Ермаков</h2>
+                <p>UI Designer</p>
+            </li>
+        </ul>
+    </section>
+    <footer>
+        <h1>адрес и контакты</h1>
+        <a href="/">WebStudio</a>
+        <p>г. Киев, пр-т Леси Украинки, 26</p>
+        <p>info@example.com</p>
+        <p>+38 099 111 11 11</p>
+    </footer>
 </body>
 </html>
