--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Studio</title>
 </head>
+<body>
 <header>
     <nav>
         <a href="/">WebStudio</a>
@@ -20,68 +21,71 @@
             </ul>
     </nav>
 </header>
-<body>
-    <section>Эффективные решения для вашего бизнеса</section>
+    <main>
     <section>
-        <h1>наши преимущества</h1>
+        <h2>Герой</h2>
+        Эффективные решения для вашего бизнеса</section>
+    <section>
+        <h2>наши преимущества</h2>
         <ul>
             <li>
-                <h2>Внимание к деталям</h2>
+                <h3>Внимание к деталям</h3>
                 <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
             </li>
             <li>
-                <h2>Пунктуальность</h2>
+                <h3>Пунктуальность</h3>
                 <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
             </li>
             <li>
-                <h2>Планирование</h2>
+                <h3>Планирование</h3>
                 <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
             </li>
             <li>
-                <h2>Современные технологии</h2>
+                <h3>Современные технологии</h3>
                 <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
             </li>
         </ul>
     </section>
     <section>
-        <h1>Чем мы занимаемся</h1>
+        <h2>Чем мы занимаемся</h2>
         <ul>
-            <li><img src="./images/box 1.png" alt="box1" width="370"></li>
-            <li><img src="./images/box 2.png" alt="box2" width="370"></li>
-            <li><img src="./images/box 3.png" alt="box3" width="370"></li>
+            <li><img src="./images/box1.png" alt="box1" width="370"></li>
+            <li><img src="./images/box2.png" alt="box2" width="370"></li>
+            <li><img src="./images/box3.png" alt="box3" width="370"></li>
         </ul>
     </section>
     <section>
-        <h1>Наша команда</h1>
+        <h2>Наша команда</h2>
         <ul>
             <li>
                 <img src="./images/img1.png" alt="img1" width="270">           
-                <h2>Игорь Демьяненко</h2>
+                <h3>Игорь Демьяненко</h3>
                 <p>Product Designer</p>
             </li>
             <li>
                 <img src="./images/img2.png" alt="img2" width="270">
-                <h2>Ольга Репина</h2>
+                <h3>Ольга Репина</h3>
                 <p>Frontend Developer</p>
             </li>
             <li>
                 <img src="./images/img3.png" alt="img3" width="270">
-                <h2>Николай Тарасов</h2>
+                <h3>Николай Тарасов</h3>
                 <p>Marketing</p>
             </li>
             <li>
                 <img src="./images/img4.png" alt="img4" width="270">
-                <h2>Михаил Ермаков</h2>
+                <h3>Михаил Ермаков</h3>
                 <p>UI Designer</p>
             </li>
         </ul>
     </section>
     <footer>
-        <h1>адрес и контакты</h1>
+        <h2>адрес и контакты</h2>
         <a href="/">WebStudio</a>
         <p>г. Киев, пр-т Леси Украинки, 26</p>
         <p>info@example.com</p>
         <p>+38 099 111 11 11</p>
     </footer>
+    </main>
 </body>
 </html>
