--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
 </header>
     <main>
     <section>
-        <h2>Герой</h2>
-        Эффективные решения для вашего бизнеса</section>
+        <h1>Эффективные решения для вашего бизнеса</h1>
+        <a href="">Заказать услугу</a>
+    </section>
     <section>
         <h2>наши преимущества</h2>
         <ul>
