correct contact info
1. e-mail and tel in the header
2. contact details in the footer

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
                 <li><a href="">Контакты</a></li>
             </ul>
             <ul>
-                <li>info@devstudio.com</li>
-                <li>+38 096 111 11 11</li>
+                <li><a href="mailto:info@example.com">info@example.com</a></li>
+                <li><a href="tel:+38 099 111 11 11">+38 099 111 11 11</a></li>
             </ul>
     </nav>
 </header>
@@ -82,10 +82,10 @@
     </section>
     <footer>
         <h2>адрес и контакты</h2>
-        <a href="/">WebStudio</a>
-        <p>г. Киев, пр-т Леси Украинки, 26</p>
-        <p>info@example.com</p>
-        <p>+38 099 111 11 11</p>
+        <p href="/">WebStudio <br>
+        г. Киев, пр-т Леси Украинки, 26 <br>
+        info@example.com <br>
+        +38 099 111 11 11</p>
     </footer>
     </main>
 </body>
