correct errors after validation

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </ul>
             <ul>
                 <li><a href="mailto:info@example.com">info@example.com</a></li>
-                <li><a href="tel:+38 099 111 11 11">+38 099 111 11 11</a></li>
+                <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
             </ul>
     </nav>
 </header>
@@ -82,8 +82,8 @@
     </section>
     <footer>
         <h2>адрес и контакты</h2>
-        <p href="/">WebStudio <br>
-        г. Киев, пр-т Леси Украинки, 26 <br>
+        <a href="/">WebStudio </a>
+        <p> г. Киев, пр-т Леси Украинки, 26 <br>
         info@example.com <br>
         +38 099 111 11 11</p>
     </footer>
