--- a/index.html
+++ b/index.html
@@ -81,11 +81,11 @@
         </ul>
     </section>
     <footer>
-        <h2>адрес и контакты</h2>
+        <h2>адрес и контакты</h2> <!-- скрытый заголовок-->
         <a href="/">WebStudio </a>
-        <p> г. Киев, пр-т Леси Украинки, 26 <br>
-        info@example.com <br>
-        +38 099 111 11 11</p>
+        <address> г. Киев, пр-т Леси Украинки, 26 </address>
+        <a href="mailto:info@example.com">info@example.com</a>
+        <a href="tel:+380991111111">+38 099 111 11 11</a>
     </footer>
     </main>
 </body>
