--- a/index.html
+++ b/index.html
@@ -9,22 +9,22 @@
 <body>
 <header>
     <nav>
-        <a href="/">WebStudio</a>
+        <a href="./">WebStudio</a>
             <ul>
                 <li><a href="">Студия</a></li>
                 <li><a href="">Портфолио</a></li>
                 <li><a href="">Контакты</a></li>
             </ul>
-            <ul>
-                <li><a href="mailto:info@example.com">info@example.com</a></li>
-                <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
-            </ul>
     </nav>
+            <ul>
+                <li><a href="mailto:info@devstudio.com">info@example.com</a></li>
+                <li><a href="tel:+380991111111">+38 096 111 11 11</a></li>
+            </ul>
 </header>
     <main>
     <section>
         <h1>Эффективные решения для вашего бизнеса</h1>
-        <a href="">Заказать услугу</a>
+        <button type="button">Заказать услугу</button>
     </section>
     <section>
         <h2>наши преимущества</h2>
@@ -52,37 +52,40 @@
         <ul>
             <li><img src="./images/box1.png" alt="box1" width="370"></li>
             <li><img src="./images/box2.png" alt="box2" width="370"></li>
-            <li><img src="./images/box3.png" alt="box3" width="370"></li>
+            <li><img src="./images/box1.jpg" alt="box2" width="370" height="294"></li>
+            <li><img src="./images/box2.jpg" alt="box3" width="370" height="294"></li>
+            <li><img src="./images/box3.jpg" alt="box1" width="370" height="294"></li>
         </ul>
     </section>
     <section>
         <h2>Наша команда</h2>
         <ul>
             <li>
-                <img src="./images/img1.png" alt="img1" width="270">           
+                <img src="./images/imgIgorDemch.jpg" alt="photo Igor Demyanenko" width="270" height="260">           
                 <h3>Игорь Демьяненко</h3>
                 <p>Product Designer</p>
             </li>
             <li>
-                <img src="./images/img2.png" alt="img2" width="270">
+                <img src="./images/imgOlgaRepina.jpg" alt="photo Olga Repina" width="270" height="260">
                 <h3>Ольга Репина</h3>
                 <p>Frontend Developer</p>
             </li>
             <li>
-                <img src="./images/img3.png" alt="img3" width="270">
+                <img src="./images/imgNikTarasov.jpg" alt="photo Nikolay Tarasov" width="270" height="260">
                 <h3>Николай Тарасов</h3>
                 <p>Marketing</p>
             </li>
             <li>
-                <img src="./images/img4.png" alt="img4" width="270">
+                <img src="./images/imgMihErmakov.jpg" alt="photo Mikhail Ermakov" width="270" height="260">
                 <h3>Михаил Ермаков</h3>
                 <p>UI Designer</p>
             </li>
         </ul>
     </section>
+    </main>
     <footer>
         <h2>адрес и контакты</h2> <!-- скрытый заголовок-->
-        <a href="/">WebStudio </a>
+        <a href="./">WebStudio </a>
         <address> г. Киев, пр-т Леси Украинки, 26 </address>
         <a href="mailto:info@example.com">info@example.com</a>
         <a href="tel:+380991111111">+38 099 111 11 11</a>
