добавляет комментарий к скрытому заголовку

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <button type="button">Заказать услугу</button>
     </section>
     <section>
-        <h2>наши преимущества</h2>
+        <h2>наши преимущества</h2> <!-- скрытый заголовок-- -->
         <ul>
             <li>
                 <h3>Внимание к деталям</h3>
