--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
         <button type="button">Заказать услугу</button>
     </section>
     <section>
-        <h2>наши преимущества</h2> <!-- скрытый заголовок-- -->
+        <!-- скрытый заголовок-->
+        <h2>наши преимущества</h2> 
         <ul>
             <li>
                 <h3>Внимание к деталям</h3>
@@ -50,26 +51,26 @@
     <section>
         <h2>Чем мы занимаемся</h2>
         <ul>
-            <li><img src="./images/box1.jpg" alt="box2" width="370" height="294"></li>
-            <li><img src="./images/box2.jpg" alt="box3" width="370" height="294"></li>
-            <li><img src="./images/box3.jpg" alt="box1" width="370" height="294"></li>
+            <li><img src="./images/box1.jpg" alt="картинка с компьютером" width="370" height="294"></li>
+            <li><img src="./images/box2.jpg" alt="картинка с мобильным телефоном" width="370" height="294"></li>
+            <li><img src="./images/box3.jpg" alt="картинка с планшетом" width="370" height="294"></li>
         </ul>
     </section>
     <section>
         <h2>Наша команда</h2>
         <ul>
             <li>
-                <img src="./images/imgIgorDemch.jpg" alt="photo Igor Demyanenko" width="270" height="260">           
+                <img src="./images/imgIgorDemch.jpg" alt="фото Игорь Демченко" width="270" height="260">           
                 <h3>Игорь Демьяненко</h3>
                 <p>Product Designer</p>
             </li>
             <li>
-                <img src="./images/imgOlgaRepina.jpg" alt="photo Olga Repina" width="270" height="260">
+                <img src="./images/imgOlgaRepina.jpg" alt="фото Ольга Репина" width="270" height="260">
                 <h3>Ольга Репина</h3>
                 <p>Frontend Developer</p>
             </li>
             <li>
-                <img src="./images/imgNikTarasov.jpg" alt="photo Nikolay Tarasov" width="270" height="260">
+                <img src="./images/imgNikTarasov.jpg" alt="фото Николай Тарасов" width="270" height="260">
                 <h3>Николай Тарасов</h3>
                 <p>Marketing</p>
             </li>
@@ -82,12 +83,12 @@
     </section>
     </main>
     <footer>
-        <h2>адрес и контакты</h2> <!-- скрытый заголовок-->
-        <a href="./">WebStudio </a>
-        <address> г. Киев, пр-т Леси Украинки, 26 </address>
-        <a href="mailto:info@example.com">info@example.com</a>
-        <a href="tel:+380991111111">+38 099 111 11 11</a>
+        <ul>
+            <li><a href="./">WebStudio </a></li>
+            <li><address> г. Киев, пр-т Леси Украинки, 26 </address></li>
+            <li><a href="mailto:info@example.com">info@example.com</a></li>
+            <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+        </ul>
     </footer>
-    </main>
 </body>
 </html>
