amend alt info for Mikhail Ermakov's pic

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <p>Marketing</p>
             </li>
             <li>
-                <img src="./images/imgMihErmakov.jpg" alt="photo Mikhail Ermakov" width="270" height="260">
+                <img src="./images/imgMihErmakov.jpg" alt="фото Михаил Ермаков" width="270" height="260">
                 <h3>Михаил Ермаков</h3>
                 <p>UI Designer</p>
             </li>
